# core

./: .coveragerc  .editorconfig  .gitignore  flake.nix  mypy.ini  pyproject.toml
.run/: Development server.run.xml  Documentation (Nix).run.xml  Documentation.run.xml  MyPy.run.xml  Mypy (Nix).run.xml  Mypy.run.xml  Server.run.xml  Tests.run.xml
docs/: conf.py  index.rst  todo.txt
docs/guide/: libraries.rst
docs/reference/: api.rst  libraries.rst  testing.rst
nix/: django_4_set_spatialite_lib.patch  tumpara-module.nix  tumpara.nix
nix/python-packages/: backports_cached-property.nix  blurhash-python.nix  blurhash.nix  django-stubs-ext.nix  django-stubs.nix  inotifyrecursive.nix  pillow-avif-plugin.nix  pygments-graphql.nix  pytest-mypy-plugins.nix  python-exiv2.nix  rawpy.nix  strawberry-graphql.nix  types-freezegun.nix  types-pillow.nix  types-python-dateutil.nix  types-pyyaml.nix  types-selenium.nix  types-six.nix
stubs/: inotify_simple.pyi  parameterized.pyi  pytest_subtests.pyi
stubs/blurhash/: __init__.pyi  blurhash.pyi
stubs/inotifyrecursive/: __init__.pyi  inotifyrecursive.pyi
stubs/pyexiv2/: __init__.py  metadata.pyi
stubs/rawpy/: __init__.pyi
tests/: conftest.py  settings.py  test_settings.py
tests/test_accounts/: api.py  apps.py  models.py  test_membership_api.py  test_memberships.py  test_user_api.py  utils.py
tests/test_api/: __init__.py  models.py  test_nodes.py  test_relay.py  test_scalar_filters.py  test_tokens.py  test_utils.py
tests/test_gallery/: test_album_api.py  test_gallery_assets_api.py  test_gallery_records_api.py  test_notes_api.py  test_records_api.py  test_stacks.py
tests/test_libraries/: apps.py  models.py  storage.py  test_album_api.py  test_assets.py  test_assets_api.py  test_event_handling.py  test_filesystem_storage.py  test_library_api.py  test_notes_api.py  test_records.py  test_scanner.py  test_scanning.py  test_stacks.py  utils.py
tests/test_libraries/migrations/: 0001_initial.py
tests/test_photos/: test_api.py  test_scanning.py
tests/test_photos/dataset/: .gitignore  __init__.py
tests/test_photos/examples/: schema.py
tests/test_storage/: apps.py  models.py  storage.py  test_event_handling.py  test_filesystem_backend.py  test_filesystem_storage.py  test_scanner.py  test_scanning.py  utils.py
tumpara/: __init__.py  urls.py  wsgi.py
tumpara/accounts/: apps.py  backends.py  models.py  utils.py
tumpara/accounts/api/: __init__.py  joinables.py  memberships.py  users.py
tumpara/accounts/migrations/: 0001_initial.py  0002_auto_20220303_1609.py  0003_auto_20220303_1631.py  0004_rename_login_name_user_username.py
tumpara/api/: __init__.py  apps.py  base.py  models.py  mutations.py  schema.graphql  schema.py  urls.py  utils.py  views.py
tumpara/api/api/: __init__.py
tumpara/api/filtering/: __init__.py  query.py  scalars.py
tumpara/api/migrations/: 0001_initial.py  (+4 more)
tumpara/gallery/: apps.py  backends.py  models.py
tumpara/libraries/: apps.py  backends.py  models.py  signals.py
tumpara/photos/: apps.py  models.py  types.py  utils.py  views.py
tumpara/settings/: base.py  development.py  production.py  testing.py
tumpara/testing/: __init__.py  conftest.py  fixtures.py  utils.py
tumpara/utils/: __init__.py  exiftool.py
(+63 files in other folders)
