[tool.poetry]
name = "tumpara"
version = "0.1.0"
description = "Self-hosted solution for managing home media libraries."
authors = ["Yannik Rödel <hey@yannik.info>"]
license = "AGPLv3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "((tests|tumpara)/.*/migrations/.*\\.py)"

[tool.isort]
profile = "black"
skip_glob = ["tests/**/migrations/*.py", "tumpara/**/migrations/*.py"]
